Maven Release plugin

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Wed May 20 23:21:17 EDT 2020
+#Wed May 20 23:24:01 EDT 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.rel.com\:pet-clinic=0.0.2
+project.dev.com\:pet-clinic-data=0.0.3-SNAPSHOT
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.com\:pet-clinic-data=0.0.2
+completedPhase=run-preparation-goals
+project.dev.com\:pet-clinic=0.0.3-SNAPSHOT
 scm.url=scm\:git\:https\://github.com/ankitjana/Pet-Clinic-App--Spring-Framework.git
+project.scm.com\:pet-clinic.tag=HEAD
+project.scm.com\:pet-clinic-web.empty=true
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.scm.com\:pet-clinic.developerConnection=scm\:git\:https\://github.com/ankitjana/Pet-Clinic-App--Spring-Framework.git
+project.scm.com\:pet-clinic-data.empty=true
+project.rel.com\:pet-clinic-web=0.0.2
+scm.tag=pet-clinic-0.0.2
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.com\:pet-clinic-web=0.0.3-SNAPSHOT
