--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -145,12 +145,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.3.2</version>
-                        <scope>test</scope>
-                    </dependency>
+<!--                    <dependency>-->
+<!--                        <groupId>org.junit.platform</groupId>-->
+<!--                        <artifactId>junit-platform-surefire-provider</artifactId>-->
+<!--                        <version>1.3.2</version>-->
+<!--                        <scope>test</scope>-->
+<!--                    </dependency>-->
                 </dependencies>
             </plugin>
 
