--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -114,7 +114,7 @@
                 <configuration>
                     <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory
                     </wroManagerFactory>
-                    <cssDestinationFolder>${project.build.dirSectory}/classes/static/resources/css</cssDestinationFolder>
+                    <cssDestinationFolder>${project.build.directory}/classes/static/resources/css</cssDestinationFolder>
                     <wroFile>${basedir}/src/main/wro/wro.xml</wroFile>
                     <extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>
                     <contextFolder>${basedir}/src/main/less</contextFolder>
