--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -100,7 +100,7 @@
             <plugin>
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-maven-plugin</artifactId>
-                <version>1.9.0</version>
+                <version>${wro4j.version}</version>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
